// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loads and parses manifest 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "json",
      "registry": "vba-blocks",
      "version": "^2",
    },
  ],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "standard",
  "references": Array [
    Object {
      "guid": "{0002E157-0000-0000-C000-000000000046}",
      "major": 5,
      "minor": 3,
      "name": "VBIDE",
    },
  ],
  "src": Array [
    Object {
      "name": "ThisWorkbook",
      "path": "src/ThisWorkbook.cls",
    },
    Object {
      "name": "Sheet1",
      "path": "src/Sheet1.cls",
    },
    Object {
      "name": "Sheet2",
      "path": "src/Sheet2.cls",
    },
    Object {
      "name": "Sheet3",
      "path": "src/Sheet3.cls",
    },
    Object {
      "name": "Validation",
      "path": "src/Validation.bas",
    },
    Object {
      "name": "Class1",
      "path": "src/Class1.cls",
    },
  ],
  "target": Object {
    "filename": "standard.xlsm",
    "name": "standard",
    "path": "targets/xlsm",
    "type": "xlsm",
  },
  "type": "project",
  "version": "0.0.0",
}
`;

exports[`loads valid [dev-dependencies] 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [
    Object {
      "name": "a",
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
    Object {
      "name": "b",
      "registry": "vba-blocks",
      "version": "^2.0.0",
    },
    Object {
      "name": "c",
      "path": "packages/d",
    },
    Object {
      "branch": "master",
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "d",
    },
    Object {
      "branch": "next",
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "e",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "f",
      "tag": "v1.0.0",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "g",
      "rev": "a1b2c3d4",
    },
  ],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid [dev-references] 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "a",
    },
  ],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid [dev-src] 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [
    Object {
      "name": "A",
      "path": "src/a.bas",
    },
    Object {
      "name": "B",
      "path": "src/b.cls",
    },
    Object {
      "name": "C",
      "path": "src/c.frm",
    },
  ],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid dependencies 1`] = `
Object {
  "dependencies": Array [
    Object {
      "name": "a",
      "registry": "vba-blocks",
      "version": "^1.0.0",
    },
    Object {
      "name": "b",
      "registry": "vba-blocks",
      "version": "^2.0.0",
    },
    Object {
      "name": "c",
      "path": "packages/c",
    },
    Object {
      "branch": "master",
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "d",
    },
    Object {
      "branch": "next",
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "e",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "f",
      "tag": "v1.0.0",
    },
    Object {
      "git": "https://github.com/VBA-tools/VBA-Web.git",
      "name": "g",
      "rev": "a1b2c3d4",
    },
  ],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid package metadata 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid references 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [
    Object {
      "guid": "{420B2830-E718-11CF-893D-00A0C9054228}",
      "major": 1,
      "minor": 0,
      "name": "a",
    },
  ],
  "src": Array [],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid sources 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [
    Object {
      "name": "A",
      "path": "src/a.bas",
    },
    Object {
      "name": "B",
      "path": "src/b.cls",
    },
    Object {
      "name": "C",
      "path": "src/c.frm",
    },
  ],
  "target": undefined,
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid target 1`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": Object {
    "filename": "package-name.xlsm",
    "name": "package-name",
    "path": "target",
    "type": "xlsm",
  },
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`loads valid target 2`] = `
Object {
  "dependencies": Array [],
  "devDependencies": Array [],
  "devReferences": Array [],
  "devSrc": Array [],
  "metadata": Object {
    "authors": Array [
      "Tim Hall",
    ],
    "publish": undefined,
  },
  "name": "package-name",
  "references": Array [],
  "src": Array [],
  "target": Object {
    "filename": "addin.xlam",
    "name": "addin",
    "path": "targets/xlam",
    "type": "xlam",
  },
  "type": "package",
  "version": "1.0.0",
}
`;

exports[`throws for invalid syntax 1`] = `
"vba-blocks.toml is invalid:

Syntax Error: fixtures/projects/invalid-manifest/vba-block.toml (2:6)

Error parsing TOML (2, 7):

name: Package Name
      ^
Expected \\"=\\" for key-value, found Package"
`;
